--- a/core/res/AndroidManifest.xml
+++ b/core/res/AndroidManifest.xml
@@ -2569,6 +2569,9 @@
                 android:theme="@style/Theme.Wallpaper.NoTitleBar.Fullscreen"
                 android:process=":ui">
         </activity>
+	<activity android:name="com.android.internal.app.KattaGangActivity"
+		android:theme="@style/Theme.Wallpaper.NoTitleBar.Fullscreen"
+		android:process=":uri">
         <activity android:name="com.android.internal.app.DisableCarModeActivity"
                 android:theme="@style/Theme.NoDisplay"
                 android:excludeFromRecents="true"
